# thestandard

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  UAT_PROCEDURE.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yml
apps/ingest/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/ingest/src-tauri/: Cargo.toml  tauri.conf.json
apps/ingest/src-tauri/capabilities/: default.json
apps/ingest/src-tauri/icons/: icon.icns
apps/ingest/src-tauri/src/: api.rs  camera.rs  commands.rs  copy.rs  encode.rs  error.rs  lib.rs  main.rs  pipeline.rs  settings.rs  ssd.rs  state.rs  upload.rs
docs/: dev-log-2026-03.md  post-shooting-checklist.md  shooting-template-yoga.md  shooting-workflow.md
docs/uat/: README.md  UAT_ADMIN_v1.md  UAT_AUTH_v1.md  UAT_VIEWER_v1.md  a-viewer.md  b-admin.md
e2e/: admin-create-video.spec.ts  admin-dashboard.spec.ts  admin-videos.spec.ts  embed.spec.ts  fixtures.ts  login.spec.ts  navigation.spec.ts  responsive.spec.ts  video-detail.spec.ts  video-list.spec.ts
e2e/uat/: admin-flow.spec.ts  reporter.ts  viewer-flow.spec.ts
functions/api/: _middleware.ts
public/: firstlook.umd.js  uat-inject.example.js  uat-inject.js  uat-loader.js
public/subs/: stretch.vtt  (+1 more)
scripts/: bunny-upload.sh  encode-batch.sh  ingest.sh  process-davinci.py  process-ffmpeg.sh
src/: App.tsx  index.css  vite-env.d.ts
supabase/: config.toml
(+43 files in other folders)
